# tell-cpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  TESTING.md
bench/: bench_common.hpp  encoding_bench.cpp  hot_path_bench.cpp  pipeline_bench.cpp
examples/: config.cpp  e2e.cpp  events.cpp  logging.cpp
include/tell/: client.hpp  config.hpp  error.hpp  props.hpp  tell.hpp  types.hpp
src/: client.cpp  config.cpp  encoding.hpp  transport.cpp  transport.hpp  validation.hpp  worker.cpp  worker.hpp
tests/: client_test.cpp  config_test.cpp  encoding_test.cpp  props_test.cpp  validation_test.cpp
